kiali/01-kiali-ns_sa.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kiali
  labels:
    app.kubernetes.io/component: kiali
    app.kubernetes.io/part-of: monitoring
    istio-injection: enabled
